vlib/v/checker/tests/for_mut_compare_rune_string_err.vv
fn main() {
	s := 'Hello, World!'
	for mut c in s.runes() {
		if c == ' ' {
			c = `x`
		}
	}
}
